--- a/Mapa de Cg MS/index.html
+++ b/Mapa de Cg MS/index.html
@@ -20,7 +20,7 @@
     <div id="loadingMessage">Carregando dados... Por favor, aguarde.</div>
     <div id="streetList"></div>
     <div id="map"></div> <!-- Elemento onde o mapa será renderizado -->
-    <div id="debugInfo"></div>
+    <div id="debugInfo" class="debug-info-hidden"></div> <!-- Adicionada a classe debug-info-hidden -->
 
     <!-- Modal para adicionar obstáculos -->
     <div id="obstacleModal" class="modal">
